refactoring in mcp